UCLALIB-58: Fix horizontal tab navigation whitespace for find resources page.

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -1316,6 +1316,7 @@ a.more-link,
 
 .l-region--top .pane-horizontal-tab-navigation {
   margin-top: 0;
+  padding-top: 0 !important;
 }
 .l-region--top .pane-horizontal-tab-navigation p {
   margin: 0;
