--- a/www/sites/all/themes/uclalib_omega/sass/components/_pane-horizontal-tab-navigation.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_pane-horizontal-tab-navigation.scss
@@ -1,5 +1,6 @@
 .l-region--top .pane-horizontal-tab-navigation {
   margin-top: 0;
+  padding-top: 0 !important;
   p {
     margin: 0;
   }
